# newlib

./: config.sub  configure  configure.ac
libgloss/aarch64/: configure
newlib/: Makefile.am  configure  configure.ac  configure.host
newlib/libc/: Makefile.in  acinclude.m4  aclocal.m4  configure  configure.in
newlib/libc/argz/: Makefile.in
newlib/libc/ctype/: Makefile.in
newlib/libc/errno/: Makefile.in
newlib/libc/iconv/: Makefile.in
newlib/libc/iconv/ccs/: Makefile.in
newlib/libc/iconv/ces/: Makefile.in
newlib/libc/iconv/lib/: Makefile.in
newlib/libc/include/: malloc.h  stdlib.h
newlib/libc/include/sys/: _types.h  config.h  features.h  signal.h  stat.h
newlib/libc/locale/: Makefile.in
newlib/libc/machine/: Makefile.in  aclocal.m4  configure
newlib/libc/misc/: Makefile.in
newlib/libc/posix/: Makefile.in  Makefile.inc  _isatty.c  posix_spawn.c  readdir.c  readdir_r.c
newlib/libc/reent/: Makefile.am  Makefile.in  Makefile.inc  getreent.c
newlib/libc/search/: Makefile.in
newlib/libc/signal/: Makefile.in
newlib/libc/ssp/: Makefile.in
newlib/libc/stdio/: Makefile.in
newlib/libc/stdio64/: Makefile.in
newlib/libc/stdlib/: Makefile.am  Makefile.in  Makefile.inc  aligned_alloc.c  envlock.c  mallocr.c
newlib/libc/string/: Makefile.in
newlib/libc/sys/: Makefile.in  Makefile.inc  configure  configure.in
newlib/libc/sys/hermit/: Makefile.am  Makefile.in  Makefile.inc  alloc.c  chown.c  close.c  configure  configure.in  crt0.c  errno.c  execve.c  fcntl.c  fork.c  forward-gen.rs  forward-in.c  forward.c  fstat.c  gen.rs  getaddrinfo.c  getpid.c  gettod.c  inet.c  inet_ntoa.c  inet_pton.c  ioctl.c  isatty.c  kill.c  link.c  lseek.c  mman.c  netdb.c  open.c  poll.c  pwd.c  read.c  readlink.c  resource.c  sched.c  signal.c  stat.c  (+12 more)
newlib/libc/sys/hermit/include/: netdb.h  poll.h  pthread.h  semaphore.h
newlib/libc/sys/hermit/include/arpa/: inet.h
newlib/libc/sys/hermit/include/machine/: _threads.h  _types.h
newlib/libc/sys/hermit/include/net/: if.h
newlib/libc/sys/hermit/include/netinet/: in.h  tcp.h
newlib/libc/sys/hermit/include/sys/: dirent.h  errno.h  fcntl.h  ioctl.h  ipc.h  mman.h  poll.h  resource.h  shm.h  socket.h  uio.h
newlib/libc/sys/hermit/net/: inet_ntop.c
newlib/libc/sys/hermit/sys/: fcntl.h  ucontext.h
newlib/libc/syscalls/: Makefile.in
newlib/libc/time/: Makefile.in
newlib/libc/unix/: Makefile.in
newlib/libc/xdr/: Makefile.in
newlib/libm/: Makefile.in  configure  configure.in
newlib/libm/common/: Makefile.am  Makefile.in
newlib/libm/complex/: Makefile.am  Makefile.in
newlib/libm/machine/: Makefile.in  configure
newlib/libm/machine/spu/: Makefile.am  Makefile.in  configure  configure.in
newlib/libm/math/: Makefile.am  Makefile.in  Makefile.inc
newlib/libm/mathfp/: Makefile.am  Makefile.in
(+86 files in other folders)
