dnl This is the newlib/libc/machine/spu configure.in file.
dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([newlib],[NEWLIB_VERSION])
AC_CONFIG_SRCDIR([Makefile.am])

AC_CANONICAL_HOST
build_hermit=no
case "${host_os}" in
    hermit*)
        build_hermit=yes
        ;;
    *)
        ;;
esac
AM_CONDITIONAL(HERMIT, test "$build_hermit" = "yes")

dnl Can't be done in NEWLIB_CONFIGURE because that confuses automake.
AC_CONFIG_AUX_DIR(../../../..)

NEWLIB_CONFIGURE(../../..)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
